# spec-elf

./: .gitignore  Cargo.toml  README.md  spec-elf
.github/workflows/: ci.yml
docs/: builders.md  code-map.md  format.md
fuzz/: spec-elf.dict
src/: lib.rs  main.rs
src/arch/: x86.rs
src/archive/: format.rs
src/builder/: compile.rs  mod.rs
src/compile_logic/: language.rs  mod.rs
src/other_commands/: inspect.rs
src/package_logic/: format.rs
src/toml/: config.rs
